# io-scope

./: Cargo.toml
.gitea/workflows/: pipeline.yaml
.github/workflows/: pipeline.yaml
io-scope/: Cargo.toml  build.rs
io-scope-ebpf/: Cargo.toml
io-scope-ebpf/.cargo/: config.toml
io-scope-ebpf/src/: helpers.rs  lib.rs  mmap.rs  open_close.rs  read_write.rs  send_recv.rs  splice_tee.rs
io-scope/src/: main.rs
io-scope/src/agg/: live.rs  mod.rs  pattern.rs  phase.rs  summary.rs
io-scope/src/model/: agg.rs  bin.rs  cli.rs  mod.rs  pattern.rs  phase.rs  syscall.rs
io-scope/src/trace/: ebpf.rs  mod.rs  ptrace.rs  socket.rs
io-scope/src/ui/: kind.rs  live.rs  logs.rs  mod.rs  paths.rs  report.rs  timeline.rs
src/: cli.rs  main.rs
src/agg/: live.rs  mod.rs
src/model/: agg.rs  cli.rs  path.rs  socket.rs
src/trace/: mod.rs  ptrace.rs  socket.rs
src/ui/: paths.rs  report.rs  summary.rs
