[package]
name = "io-scope"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["ebpf"]
ebpf = ["aya", "tokio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
time = { version = "0.3", features = ["std"] }
thiserror = "2.0"
libc = "0.2"
bytes = "1.11"

aya = { version = "0.13", optional = true, features = [ "async_tokio" ] }
tokio = { version = "1.49", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
