[package]
name = "io-scope"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["ebpf"]
ebpf = ["aya"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
time = { version = "0.3", features = ["std"] }
thiserror = "2.0"

nix = { version = "0.30", features = ["ptrace", "signal", "fs"] }
bytes = "1.11"

aya = { version = "0.13", optional = true }
